--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,12 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <vue-city data="https://api-adresse.data.gouv.fr/search/?q="
+              :multiple="true"
+              data_to_get="city"
+              result_property="features"
+              input_class="form-control"
+              label="cp">
+    </vue-city>
   </body>
 </html>
