added mulitple choice

--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>vue-city</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but vue-city doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <vue-city data="https://api-adresse.data.gouv.fr/search/?q="
-              :multiple="true"
-              data_to_get="city"
-              result_property="features"
-              input_class="form-control"
-              label="cp">
-    </vue-city>
-  </body>
+</head>
+<body>
+<noscript>
+    <strong>We're sorry but vue-city doesn't work properly without JavaScript enabled. Please enable it to
+        continue.</strong>
+</noscript>
+<div id="app"><app></app>
+</div>
+<!-- built files will be auto injected -->
+</body>
 </html>
